<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/description"
            android:textColor="?android:textColorSecondary" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:numStars="6"
            android:padding="8dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/description2" />

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/bovebben"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:onClick="to_bovebben"
            android:layout_centerHorizontal="true"
            android:text="@string/more" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bovebben"
            android:text="@string/to_cart"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>