<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCBFBF"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/EditTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="#424242"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33" />

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="#424242"
            app:layout_constraintBottom_toTopOf="@+id/LoginButton"
            app:layout_constraintTop_toBottomOf="@+id/EditTextUsername"
            app:layout_constraintVertical_bias="0.276"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/LoginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#512DA8"
            app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/RegisterButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="224dp"
            android:onClick="register"
            android:text="@string/registration"
            android:textColor="#512DA8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/guestLoginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="loginAsGuest"
            android:text="@string/sign_in_as_guest"
            android:textColor="#512DA8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegisterButton"
            app:layout_constraintVertical_bias="0.792" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>